--- a/mailup.html
+++ b/mailup.html
@@ -17,37 +17,47 @@
                     "DocType": null,
                     "Head": null,
                     "Body": `
-                        <div style="font-family: Arial, sans-serif; background-color: #f4f4f4; padding: 20px;">
-                            <div style="background-color: #ffffff; border-radius: 8px; padding: 20px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
-                                <div style="text-align: center;">
-                                    <img src="./Img/Novogar N.png" alt="Logo de Novogar" style="width: 150px;">
-                                    <h1>¡Tu compra ha sido despachada!</h1>
-                                </div>
-                                <div style="margin: 20px 0;">
-                                    <p>Estimado/a [Nombre del Cliente],</p>
-                                    <p>Nos complace informarte que tu compra ha sido despachada con éxito. A continuación, encontrarás los detalles de tu pedido:</p>
-                                    <ul>
-                                        <li><strong>Pedido N°:</strong> [Número de Pedido]</li>
-                                        <li><strong>Fecha de Despacho:</strong> [Fecha]</li>
-                                        <li><strong>Transportista:</strong> [Nombre del Transportista]</li>
-                                        <li><strong>Seguimiento:</strong> [Número de Seguimiento]</li>
-                                    </ul>
-                                    <p>Para más información, puedes visitar nuestro sitio web o ponerte en contacto con nuestro servicio al cliente.</p>
-                                    <a href="[URL de seguimiento]" style="display: inline-block; background-color: #28a745; color: #ffffff; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold;">Rastrear mi pedido</a>
-                                </div>
-                                <div style="text-align: center; font-size: 12px; color: #777;">
-                                    <p>Gracias por elegir Novogar.</p>
-                                    <p>&copy; 2024 Novogar. Todos los derechos reservados.</p>
-                                </div>
-                            </div>
-                        </div>
-                    `,
+                        <div style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; background-color: #f0f0f5; padding: 10px;">
+    <div style="background-color: #ffffff; border-radius: 16px; padding: 30px; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); margin: auto;">
+        <div style="text-align: center;"><img src="https://i.ibb.co/3cFWspq/Novogar-logo.png" style="width: 100%; max-width: 400px;" alt="Logo">
+            <hr style="border: 1px solid #e0e0e0; margin: 20px 0;">
+            <h2 style="color: #333; font-size: 28px; margin: 0;">&iexcl;Hola LUCAS PONZONI!</h2>
+            <p style="color: #555; font-size: 16px; margin: 10px 0;">Referente al Pedido del usuario: <u><a href="mailto:lucasponzoninovogar@gmail.com" target="_blank" style="color: #007aff;">lucasponzoninovogar@gmail.com</a></u></p>
+            <hr style="border: 1px solid #e0e0e0; margin: 20px 0;">
+            <h1 style="color: #333; font-size: 24px;">&iexcl;Tu compra ha sido preparada para despacho!</h1>
+        </div>
+        <div style="margin: 20px 0; text-align: center;">
+            <p style="font-size: 16px; color: #333;">Dentro de los pr&oacute;ximos <strong style="color: #28a745;">2 d&iacute;as h&aacute;biles</strong>, cuando tu compra llegue al dep&oacute;sito del operador log&iacute;stico, podr&aacute;s seguir el estado con el n&uacute;mero de seguimiento:</p>
+            <p style="font-weight: bold;">Pedido N&deg;: [N&uacute;mero de Pedido]</p>
+            <p style="font-weight: bold;">Transportista: [Nombre del Transportista]</p>
+            <p style="font-weight: bold;">Seguimiento: [N&uacute;mero de Seguimiento]</p><a href="[URL%20de%20seguimiento]" style="display: inline-block; background-color: #007aff; color: #ffffff; padding: 12px 25px; border-radius: 8px; text-decoration: none; font-weight: bold; margin-top: 10px;">Rastrear mi pedido</a>
+        </div>
+        <hr style="border: 1px solid #e0e0e0; margin: 20px 0;">
+        <div style="text-align: center; font-size: 14px; color: rgb(102, 102, 102);">
+            <p>Recuerda que cualquier persona mayor de 18 a&ntilde;os puede recibir tu paquete presentando su DNI.</p>
+            <p>No es posible programar un d&iacute;a espec&iacute;fico ni horario de entrega. El d&iacute;a de la visita, recibir&aacute;s un correo electr&oacute;nico con el asunto &apos;Hoy vamos a visitarte&apos;. Los plazos de entrega oscilan entre 3 y 12 d&iacute;as h&aacute;biles.</p>
+            <table style="width: 100%; background-color: #4B5563; color: #fff; border-radius: 8px; padding: 15px;">
+                <tbody>
+                    <tr>
+                        <td style="padding: 10px;">
+                            <p style="text-align: left;"><strong>IMPORTANTE:</strong> Nuestro servicio de entregas es puerta a puerta. Los choferes/acompa&ntilde;antes no tienen permitido el ingreso a los domicilios.</p>
+                            <p style="text-align: left;"><strong>VISITAS:</strong> En caso de que en la primera visita notifiquen &apos;Destinatario Ausente&apos;, volver&aacute;n a visitarte dentro de las 72hs h&aacute;biles.</p>
+                            <p style="text-align: left;">Si al recibir tu paquete notas alg&uacute;n da&ntilde;o en el embalaje, <strong style="color: #FFD700;">te pedimos que rechaces la entrega de inmediato</strong>.</p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <p style="text-align: center; margin-top: 20px;">Ante cualquier inconveniente, comun&iacute;cate con nosotros enviando un email a <a href="mailto:posventa@novogar.com.ar" style="color: #007aff;">posventa@novogar.com.ar</a>, indicando tu n&uacute;mero de pedido.</p>
+            <p style="text-align: center; margin-top: 20px;">Gracias por elegir Novogar.</p><a href="https://wa.me/549XXXXXXXXXX" style="display: inline-block; background-color: #25D366; color: #ffffff; padding: 12px 25px; border-radius: 8px; text-decoration: none; font-weight: bold; margin-top: 20px;">Contactar por WhatsApp</a>
+        </div>
+    </div>
+</div>`,
                     "BodyTag": "<body>"
                 },
                 "Text": "Tu compra ha sido despachada. Consulta el email HTML para más detalles.",
                 "Subject": "Confirmación de Despacho",
                 "From": {
-                    "Name": "NOVOGAR TEST",
+                    "Name": "TEST EMAIL DESPACHO",
                     "Email": "info@novogar.com.ar"
                 },
                 "To": [
