--- a/mailup.html
+++ b/mailup.html
@@ -58,7 +58,7 @@
                 "Subject": "Confirmación de Despacho",
                 "From": {
                     "Name": "TEST EMAIL DESPACHO",
-                    "Email": "info@novogar.com.ar"
+                    "Email": "posventa@novogar.com.ar"
                 },
                 "To": [
                     {
