--- a/meliAr.html
+++ b/meliAr.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="./index.html" class="nav-link">Generación de etiqueta</a></li>
-                    <li class="nav-item"><a href="./envios.html" class="nav-link">Seguimiento de Envios</a></li>
+                    <li class="nav-item"><a href="./envios.html" class="nav-link">Envios Andesmar</a></li>
                     <li class="nav-item"><a href="./meliAr.html" class="nav-link active"><img id="meli-logo" src="./Img/meli.png">Envios Mercado Libre</a></li>
                     <li class="nav-item"><a href="./bna.html" class="nav-link">Envios <img id="meli-logo" src="./Img/bna-logo.png" alt="BNA Logo" /></a></li>
                 </ul>
