--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a href="./index.html" class="nav-link active">Generación de etiqueta</a></li>
-                <li class="nav-item"><a href="./envios.html" class="nav-link">Seguimiento de Envios</a></li>
+                <li class="nav-item"><a href="./envios.html" class="nav-link">Envios Andesmar</a></li>
                 <li class="nav-item"><a href="./bna.html" class="nav-link">Envios <img id="meli-logo" src="./Img/bna-logo.png" alt="BNA Logo" /></a></li>
             </ul>
         </div>
