--- a/bna.html
+++ b/bna.html
@@ -141,7 +141,9 @@
     
     <script src="./js/bnaCards.js"></script>
     <script src="./js/features.js"></script>
-    <script src="js/ciudades.js"></script>
+    <script src="./js/ciudades.js"></script>
+    <script src="./js/emailSender.js"></script>
+    <script src="./js/emailTemplate.js"></script>
 
 </body>
 </html>
