--- a/despachos.html
+++ b/despachos.html
@@ -78,9 +78,16 @@
                 <tbody>
                     <!-- Los datos se llenarán aquí dinámicamente -->
                 </tbody>
-            </table>            
-        </div>
+            </table>
+        </div>        
+
+        <nav aria-label="Page navigation"></nav>
+        <ul class="pagination justify-content-center" id="pagination"></ul>
+    </nav>
+    </div> 
+    
     </div>
+
 
     <div class="modal fade" id="ingresoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
@@ -113,7 +120,12 @@
                 </div>
             </div>
         </div>
-    </div>      
+    </div>    
+
+<!-- Botón de flecha hacia arriba -->
+<a href="#" id="scrollToTop" class="btn btn-warning" style="display: none;">
+<i class="fas fa-arrow-up"></i>
+</a>
 
     <footer class="center">
         <img class="logo-foot" src="./Img/Novogar N.png" alt="Logo Novogar">
@@ -129,6 +141,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 
     <!-- Scripts Bootstrap-->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -138,5 +151,6 @@
     <!-- SweetAlert JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/ingreso.js"></script>
+    <script src="./js/features.js"></script>
 </body>
 </html>
