--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a href="./index.html" class="nav-link active">Generación de etiqueta</a></li>
                 <li class="nav-item"><a href="./envios.html" class="nav-link">Envios Andesmar</a></li>
+                <li class="nav-item"><a href="./despachos.html" class="nav-link">Despachos</a></li>
                 <li class="nav-item"><a href="./bna.html" class="nav-link">Envios <img id="meli-logo" src="./Img/bna-logo.png" alt="BNA Logo" /></a></li>
             </ul>
         </div>
