--- a/bna.html
+++ b/bna.html
@@ -26,6 +26,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="./index.html" class="nav-link">Generación de etiqueta</a></li>
                     <li class="nav-item"><a href="./envios.html" class="nav-link">Envios Andesmar</a></li>
+                    <li class="nav-item"><a href="./despachos.html" class="nav-link">Despachos</a></li>
                     <li class="nav-item"><a href="./bna.html" class="nav-link active">Envios <img id="meli-logo" src="./Img/bna-logo.png" alt="BNA Logo" /></a></li>
                 </ul>
             </div>
