--- a/despachos.html
+++ b/despachos.html
@@ -68,12 +68,16 @@
         <div class="text-center">
             <div id="porcentajes" class="d-flex justify-content-center align-items-center p-2">
                 <span class="percentage-card text-danger mx-2" id="andreaniPorcentaje">
-                    <i class="bi bi-truck" style="font-size: 1.2em;"></i>
+                    <i class="bi bi-truck-front" style="font-size: 1.2em;"></i>
                     <span class="ml-1">Calculando Andreani... <span id="andreaniValue"></span></span>
                 </span>
                 <span class="percentage-card text-primary mx-2" id="andesmarPorcentaje">
                     <i class="bi bi-truck-front" style="font-size: 1.2em;"></i>
                     <span class="ml-1">Calculanado Andesmar... <span id="andesmarValue"></span></span>
+                </span>
+                <span class="percentage-card text-secondary mx-2" id="SinDespacharPorcentaje">
+                    <i class="bi bi-stopwatch-fill" style="font-size: 1.2em;"></i>
+                    <span class="ml-1">Calculanado Sin Despachar... <span id="SinDespacharValue"></span></span>
                 </span>
             </div>
         </div>  
@@ -82,12 +86,13 @@
             <table id="data-table" class="table table-striped">
                 <thead>
                     <tr>
-                        <th><i class="bi bi-calendar"></i> Fecha</th>
-                        <th><i class="bi bi-flag"></i> Estado</th>
-                        <th><i class="bi bi-person"></i> Cliente</th>
-                        <th><i class="bi bi-file-earmark-text"></i> Remito</th>
-                        <th><i class="bi bi-cash"></i> Valor</th>
-                        <th><i class="bi bi-truck"></i> Operador</th>
+                        <th><i class="bi bi-calendar-check-fill"></i> Fecha</th>
+                        <th><i class="bi bi-geo-alt-fill"></i> Estado</th>
+                        <th><i class="bi bi-person-badge-fill"></i> Cliente</th>
+                        <th><i class="bi bi-file-earmark-text-fill"></i> Remito</th>
+                        <th><i class="bi bi-currency-dollar"></i> Valor</th>
+                        <th><i class="bi bi-truck-front-fill"></i> Operador</th>
+                        <th><i class="bi bi-trash-fill"></i></th>
                     </tr>
                 </thead>
                 <tbody>
