--- a/despachos.html
+++ b/despachos.html
@@ -72,15 +72,15 @@
 
         <div class="text-center">
             <div id="porcentajes" class="d-flex justify-content-center align-items-center p-2">
-                <span class="percentage-card text-danger mx-2" id="andreaniPorcentaje">
+                <span class="percentage-card text-danger mx-2 text-center" id="andreaniPorcentaje">
                     <i class="bi bi-truck-front" style="font-size: 1.2em;"></i>
                     <span class="ml-1">Calculando Andreani... <span id="andreaniValue"></span></span>
                 </span>
-                <span class="percentage-card text-primary mx-2" id="andesmarPorcentaje">
+                <span class="percentage-card text-primary mx-2 text-center" id="andesmarPorcentaje">
                     <i class="bi bi-truck-front" style="font-size: 1.2em;"></i>
                     <span class="ml-1">Calculanado Andesmar... <span id="andesmarValue"></span></span>
                 </span>
-                <span class="percentage-card text-secondary mx-2" id="SinDespacharPorcentaje">
+                <span class="percentage-card text-secondary mx-2 text-center" id="SinDespacharPorcentaje">
                     <i class="bi bi-stopwatch-fill" style="font-size: 1.2em;"></i>
                     <span class="ml-1">Calculanado Sin Despachar... <span id="SinDespacharValue"></span></span>
                 </span>
@@ -142,6 +142,10 @@
             </div>
         </div>
     </div>   
+
+    <div id="spinner2" class="spinner-container" style="display:none;">
+        <div class="spinner"></div>
+    </div>
     
     
 <!-- Modal para Logística Propia -->
