--- a/despachos.html
+++ b/despachos.html
@@ -72,20 +72,20 @@
 
         <div class="text-center">
             <div id="porcentajes" class="d-flex flex-column flex-md-row justify-content-center align-items-center p-2">
-                <span class="percentage-card text-danger mx-2 text-center col-12 col-md-auto" id="andreaniPorcentaje">
+                <span class="percentage-card text-danger mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="andreaniPorcentaje">
                     <i class="bi bi-truck-front" style="font-size: 1.5em;"></i>
                     <span class="ml-1">Calculando Andreani... <span id="andreaniValue"></span></span>
                 </span>
-                <span class="percentage-card text-primary mx-2 text-center col-12 col-md-auto" id="andesmarPorcentaje">
+                <span class="percentage-card text-primary mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="andesmarPorcentaje">
                     <i class="bi bi-truck-front" style="font-size: 1.5em;"></i>
                     <span class="ml-1">Calculando Andesmar... <span id="andesmarValue"></span></span>
                 </span>
-                <span class="percentage-card text-secondary mx-2 text-center col-12 col-md-auto" id="SinDespacharPorcentaje">
+                <span class="percentage-card text-secondary mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="SinDespacharPorcentaje">
                     <i class="bi bi-stopwatch-fill" style="font-size: 1.5em;"></i>
                     <span class="ml-1">Calculando Sin Despachar... <span id="SinDespacharValue"></span></span>
                 </span>
             </div>
-        </div>         
+        </div>                      
         
         <div class="table-responsive">
             <table id="data-table" class="table table-striped">
