--- a/despachos.html
+++ b/despachos.html
@@ -70,6 +70,9 @@
             <span class="sr-only">Cargando...</span>
         </div>
 
+        <div id="search-despachos" class="search-despachos"></div>
+
+
         <div class="text-center">
             <div id="porcentajes" class="d-flex flex-column flex-md-row justify-content-center align-items-center p-2">
                 <span class="percentage-card text-danger mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="andreaniPorcentaje">
