--- a/despachos.html
+++ b/despachos.html
@@ -96,25 +96,27 @@
                 </span>
             </div>
         </div>                            
-        
-        <div class="table-responsive">
-            <table id="data-table" class="table table-striped">
-                <thead>
-                    <tr>
-                        <th><i class="bi bi-calendar-check-fill"></i> Fecha</th>
-                        <th><i class="bi bi-geo-alt-fill"></i> Estado</th>
-                        <th><i class="bi bi-person-badge-fill"></i> Cliente</th>
-                        <th><i class="bi bi-file-earmark-text-fill"></i> Remito</th>
-                        <th><i class="bi bi-currency-dollar"></i> Valor</th>
-                        <th><i class="bi bi-truck-front-fill"></i> Operador</th>
-                        <th><i class="bi bi-trash-fill"></i></th>
-                        <th><i class="bi bi-chat-dots-fill"></i></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Los datos se llenarán aquí dinámicamente -->
-                </tbody>
-            </table>
+
+<div class="table-responsive">
+    <table id="data-table" class="table table-striped">
+        <thead>
+            <tr>
+                <th><i class="bi bi-calendar-check-fill"></i> Fecha</th>
+                <th><i class="bi bi-geo-alt-fill"></i> Estado</th>
+                <th><i class="bi bi-person-badge-fill"></i> Cliente</th>
+                <th><i class="bi bi-file-earmark-text-fill"></i> Remito</th>
+                <th><i class="bi bi-currency-dollar"></i> Valor</th>
+                <th><i class="bi bi-truck-front-fill"></i> Operador</th>
+                <th><i class="bi bi-trash-fill"></i></th>
+                <th><i class="bi bi-chat-dots-fill"></i></th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Los datos se llenarán aquí dinámicamente -->
+        </tbody>
+    </table>
+</div>
+
 
             <nav aria-label="Page navigation">
                 <ul class="pagination justify-content-center" id="pagination"></ul>
