--- a/despachos.html
+++ b/despachos.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
 </head>
-<body class="envios-body">
+<body class="envios-body"> <strong></strong>
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
