--- a/bna.html
+++ b/bna.html
@@ -66,8 +66,12 @@
                         </span>
                     </button>
 
+                    <button id="btnSwitch1" type="button" class="btn btn-info position-relative" style="white-space: nowrap">
+                        <i class="bi bi-1-circle-fill" style="font-size: 24px;"></i>
+                    </button>
+
                     <button id="btnSwitch" type="button" class="btn btn-success position-relative" style="white-space: nowrap">
-                        <i class="bi bi-toggle-off"></i>
+                        <i class="bi bi-2-circle-fill" style="font-size: 24px;"></i>
                     </button>
 
                  </div>
