--- a/bna.html
+++ b/bna.html
@@ -51,7 +51,7 @@
                  <div class="trio-de-botones">
 
                     <button id="btnFacturar" type="button" class="btn btn-primary position-relative" style="white-space: nowrap; min-width: 140px;">
-                        A Facturar <i class="bi bi-cart-check-fill"></i>
+                        Facturar <i class="bi bi-cart-check-fill"></i>
                         <span id="contadorCardsFacturar" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger badge-large">
                             <i class="bi bi-arrow-clockwise"></i>
                             <span class="visually-hidden"></span>
@@ -59,7 +59,7 @@
                     </button>
                     
                     <button id="btnPreparar" type="button" class="btn btn-secondary position-relative" style="white-space: nowrap; min-width: 140px;">
-                        A Preparar <i class="bi bi-box2"></i>
+                        Preparar <i class="bi bi-box2"></i>
                         <span id="contadorCards" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger badge-large">
                             <i class="bi bi-arrow-clockwise"></i>
                             <span class="visually-hidden"></span>
