--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -155,6 +155,20 @@
 
 </div>
 <!-- Fin Modal Comentario -->
+
+<!-- Alert Nuevas Ventas -->
+<div class="notification" id="newSalesNotification">
+    <div class="d-flex justify-content-between align-items-center">
+      <div>
+        <span id="notificationMessage"></span>
+      </div>
+      <button type="button" class="close ml-2" aria-label="Close" onclick="closeNotification()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <button class="btn btn-primary mt-2" onclick="location.reload()">Recargar Página</button>
+  </div>
+<!-- Fin Alert Nuevas Ventas -->
     
         <!-- Botón de flecha hacia arriba -->
         <a href="#" id="scrollToTop" class="btn btn-warning" style="display: none;">
