--- a/despachos.html
+++ b/despachos.html
@@ -26,9 +26,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="./index.html" class="nav-link">Generación de etiqueta</a></li>
-                    <li class="nav-item"><a href="./envios.html" class="nav-link">Envios Andesmar</a></li>
-                    <li class="nav-item"><a href="./despachos.html" class="nav-link active">Despachos</a></li>
+                    <li class="nav-item"><a href="./index.html" class="nav-link">Etiquetas</a></li>
+                    <li class="nav-item"><a href="./envios.html" class="nav-link">Andesmar</a></li>
+                    <li class="nav-item"><a href="./despachos.html" class="nav-link active">Logistica</a></li>
+                    <li class="nav-item"><a href="./facturacionMl.html" class="nav-link">Facturacion MeLi</a></li>
+                    <li class="nav-item"><a href="" class="nav-link"><img id="meli-logo" src="./Img/meli.png">MeLi (Proximamente)</a></li>
                     <li class="nav-item"><a href="./bna.html" class="nav-link">Envios <img id="meli-logo" src="./Img/bna-logo.png" alt="BNA Logo" /></a></li>
                 </ul>
             </div>
