--- a/meliAr.html
+++ b/meliAr.html
@@ -50,7 +50,7 @@
             <div class="col-md-6 mb-3">
                 <!-- Buscador -->
                 <div class="input-group">
-                    <input type="text" class="form-control" id="search" placeholder="📦 Buscar por Operacion">
+                    <input type="text" class="form-control" id="searchMercadoLibre" placeholder="📦 Buscar por Operacion">
                     <div class="input-group-append">
                         <button class="btn btn-outline-secondary" type="button">
                             <i class="fas fa-search"></i>
