--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -101,17 +101,18 @@
                 <span class="sr-only">Cargando...</span>
             </div>     
 
+            <!-- Comentarios Alert -->
             <div id="statusCard" class="card">
                 <div class="card-body">
                     <h5 class="card-title text-center">Estado de los Botones</h5>
                     <div class="d-flex justify-content-around mb-3">
-                        <button class="btn btn-sm btn-secondary">
+                        <button class="btn btn-sm btn-secondary btn-timer">
                             <i class="bi bi-pencil"></i> Vacío
                         </button>
-                        <button class="btn btn-sm btn-success">
+                        <button class="btn btn-sm btn-success btn-timer">
                             <i class="bi bi-pencil"></i> Comentario
                         </button>
-                        <button class="btn btn-sm btn-warning">
+                        <button class="btn btn-sm btn-warning btn-timer">
                             <i class="bi bi-pencil"></i> Email
                         </button>
                     </div>
@@ -128,7 +129,7 @@
                     </div>
                 </div>
             </div>
-            
+            <!-- Fin Comentarios Alert -->
         
             <div class="error-message" style="display: none;">
                 <div class="d-flex flex-column align-items-center justify-content-center text-center w-100">
