--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -81,7 +81,7 @@
             
                 <div id="btnNotificaciones" class="position-relative d-flex justify-content-center align-items-center bg-info text-white p-2 rounded" style="white-space: nowrap;">
                     Pendientes <i class="bi bi-bell"></i>
-                    <span id="contadorNotificaciones" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger badge-large">
+                    <span id="contadorNotificaciones" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger badge-large2">
                         <i class="bi bi-exclamation-circle"></i>
                         <span class="visually-hidden"></span>
                     </span>
