--- a/bna.html
+++ b/bna.html
@@ -111,7 +111,7 @@
             <span class="sr-only">Cargando...</span>
         </div>
         
-        <div class="row mt-4" id="envios-cards">
+        <div class="row mt-4" id="meli-cards">
             <!-- Aquí se agregarán las tarjetas -->
         </div>
 
