--- a/meliAr.html
+++ b/meliAr.html
@@ -127,6 +127,10 @@
             <a href="#" id="scrollToTop" class="btn btn-warning" style="display: none;">
                 <i class="fas fa-arrow-up"></i>
                 </a>
+
+                <div id="spinner2" class="spinner-container" style="display:none;">
+                    <div class="spinner"></div>
+                </div>
     
         <footer class="center">
             <img class="logo-foot" src="./Img/Novogar N.png" alt="Logo Novogar">
