--- a/meliAr.html
+++ b/meliAr.html
@@ -165,6 +165,8 @@
     <script src="./js/features.js"></script>
     <script src="./js/meliCardsFisebase.js"></script>
     <script src="./js/ciudades.js"></script>
+    <script src="./js/emailSender.js"></script>
+    <script src="./js/emailTemplate.js"></script>
     
 
 </body>
