--- a/despachos.html
+++ b/despachos.html
@@ -251,6 +251,7 @@
     
     <!-- Cargar jsPDF -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="./js/features.js"></script>
     <script src="./js/ingreso.js"></script>
     
 </body>
