--- a/despachos.html
+++ b/despachos.html
@@ -42,7 +42,7 @@
     <div class="row justify-content-between align-items-center search-filter-container">
         <div class="col-md-6 mb-3">
             <div class="input-group">
-                <input type="text" class="form-control" id="searchDespachos" placeholder="Buscar por cliente o Remito...">
+                <input type="text" class="form-control" id="searchDespachosLogistica" placeholder="Buscar por cliente o Remito...">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button">
                         <i class="fas fa-search"></i>
