--- a/controlMeli.html
+++ b/controlMeli.html
@@ -82,6 +82,7 @@
         </div>
     
         <h2 class="counter" id="totalCantidad">Total Cantidad: 0</h2>
+        <h2 class="counter" id="totalFila">Total Filas: 0</h2>
         
         <div class="table-responsive"> <!-- Contenedor para hacer la tabla responsive -->
             <table class="table table-bordered">
