--- a/controlMeli.html
+++ b/controlMeli.html
@@ -81,8 +81,10 @@
             <span class="sr-only">Cargando...</span>
         </div>
     
-        <h2 class="counter" id="totalCantidad">Total Cantidad: 0</h2>
-        <h2 class="counter" id="totalFila">Total Filas: 0</h2>
+        <div class="contadores">
+            <h2 class="counter" id="totalCantidad"><i class="bi bi-box-seam-fill"></i> Total Unidades: 0</h2>
+        <h2 class="counter counterfila" id="totalFila"><i class="bi bi-bookmark-check-fill"></i> Total Etiquetas: 0</h2>
+        </div>
         
         <div class="table-responsive"> <!-- Contenedor para hacer la tabla responsive -->
             <table class="table table-bordered">
