--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -6,6 +6,7 @@
     <title>Envios</title>
     
     <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=lock_open" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,6 +22,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300..700&display=swap" rel="stylesheet">  
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+
+    <style>
+        /* Reducir el padding en las últimas tres columnas de la tabla específica */
+        #data-table th:nth-last-child(-n+3),
+        #data-table td:nth-last-child(-n+3) {
+            padding: 10px; /* Ajusta este valor según tus necesidades */
+        }
+    </style>
 
 </head>
 <body class="envios-body">
@@ -152,7 +161,8 @@
                     <th><i class="bi bi-box-seam-fill"></i> Producto</th>
                     <th><i class="bi bi-credit-card"></i> Medio de Pago</th>
                     <th><i class="bi bi-trash-fill"></i></th>
-                    <th><i class="bi bi-chat-dots-fill"></i></th>      
+                    <th><i class="bi bi-rocket-takeoff"></i></th>     
+                    <th><i class="bi bi-chat-dots-fill"></i></th>   
                 </tr>
             </thead>                      
             <tbody>
@@ -179,8 +189,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="comentarioModalLabel">Actualizar Comentario</h5>
-                <button type="button" class="btn-close btn-danger" data-bs-dismiss="modal" aria-label="Close">
-                    <i class="bi bi-x-lg"></i>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                 </button>
             </div>
             <div class="modal-body">
@@ -280,6 +289,7 @@
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         
         <!-- SweetAlert JS -->
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
