--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -26,8 +26,8 @@
     <style>
         /* Reducir el padding en las últimas tres columnas de la tabla específica */
         #data-table th:nth-last-child(-n+3),
-        #data-table td:nth-last-child(-n+3) {
-            padding: 10px; /* Ajusta este valor según tus necesidades */
+        #data-table td:nth-last-child(-n+3){
+            padding: 10px; 
         }
     </style>
 
