--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -51,9 +51,9 @@
                     <li class="nav-item"><a href="./index.html" class="nav-link">Etiquetas</a></li>
                     <li class="nav-item"><a href="./envios.html" class="nav-link">Andesmar</a></li>
                     <li class="nav-item"><a href="./despachos.html" class="nav-link">Logistica</a></li>
-                    <li class="nav-item"><a href="./facturacionMl.html" class="nav-link active">Facturacion MeLi</a></li>
+                    <li class="nav-item"><a href="./facturacionMl.html" class="nav-link active">Fact. MeLi</a></li>
                     <li class="nav-item"><a href="./meliAr.html" class="nav-link"><img id="meli-logo" src="./Img/meli.png">MeLi</a></li>
-                    <li class="nav-item"><a href="./controlMeli.html" class="nav-link">Colecta MeLi</a></li>
+                    <li class="nav-item"><a href="./controlMeli.html" class="nav-link">Colecta</a></li>
                     <li class="nav-item"><a href="./bna.html" class="nav-link">Envios <img id="meli-logo" src="./Img/bna-logo.png" alt="BNA Logo" /></a></li>
                 </ul>
             </div>
