--- a/meliAr.html
+++ b/meliAr.html
@@ -34,7 +34,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="./Img/Novogar N.png" alt="Logo" class="navbar-logo">
-                <span class="navbar-brand-text">pulpix 🐙</span>
+                <span class="navbar-brand-text">blackCat 🐈‍⬛</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
