--- a/envios.html
+++ b/envios.html
@@ -25,7 +25,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="./Img/Novogar N.png" alt="Logo" class="navbar-logo">
-                <span class="navbar-brand-text">blackCat 🐈‍⬛</span>
+                <span class="navbar-brand-text">black<span class="navbar-brand-text2">Cat</span> <img class="blackCat" src="./Img/blackCat.png" alt="BlackCat" srcset=""> </span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,10 +35,10 @@
                     <li class="nav-item"><a href="./index.html" class="nav-link">Etiquetas</a></li>
                     <li class="nav-item"><a href="./envios.html" class="nav-link active">Andesmar</a></li>
                     <li class="nav-item"><a href="./despachos.html" class="nav-link">Logistica</a></li>
-                    <li class="nav-item"><a href="./facturacionMl.html" class="nav-link">Fact. MeLi</a></li>
+                    <li class="nav-item"><a href="./facturacionMl.html" class="nav-link">Fact.</a></li>
                     <li class="nav-item"><a href="./meliAr.html" class="nav-link"><img id="meli-logo" src="./Img/meli.png">MeLi</a></li>
                     <li class="nav-item"><a href="./controlMeli.html" class="nav-link">Colecta</a></li>
-                    <li class="nav-item"><a href="./bna.html" class="nav-link">Envios <img id="meli-logo" src="./Img/bna-logo.png" alt="BNA Logo" /></a></li>
+                    <li class="nav-item"><a href="./bna.html" class="nav-link"><img id="meli-logo" src="./Img/bna-logo.png" alt="BNA Logo" /></a></li>
                 </ul>
             </div>
         </div>
