--- a/controlMeli.html
+++ b/controlMeli.html
@@ -68,17 +68,20 @@
                 </div>
             </div>
             
-            <div class="col-md-3 mb-3 d-flex justify-content-end">
+            <div class="col-md-3 mb-3 d-flex justify-content-end botonesMeli">
                 <!-- Aca van los botones -->
-                <button type="button" class="btn btn-danger me-2 escaneoColecta" data-toggle="modal" data-target="#escaneoColecta">
-                    <i class="bi bi-tags-fill"></i> Escanear
+                <button type="button" class="btn btn-danger me-2" data-toggle="modal" data-target="#escaneoColecta">
+                    <i class="bi bi-1-circle-fill"></i> Ingreso
+                </button>
+                <button type="button" class="btn btn-secondary me-2" data-toggle="modal" data-target="#escaneoColecta2">
+                    <i class="bi bi-2-circle-fill"></i> Egreso
                 </button>
                 <button type="button" id="cerrarButton" class="btn btn-success" data-toggle="modal" data-target="#queryModal">
                     <i class="bi bi-x-lg"></i> Cerrar
                 </button>
             </div>
         </div>
-    </div>
+    </div>    
     
 
     <div class="container mt-5" id="cards-container">
@@ -132,6 +135,27 @@
             </div>
         </div>
     </div>
+
+        <!-- Modal para escanear 2 -->
+        <div class="modal fade" id="escaneoColecta2" tabindex="-1" role="dialog" aria-labelledby="escaneoColectaLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="escaneoColectaLabel">Escanear Código para marcar Preparacion</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <input type="text" id="codigoInput" class="form-control" placeholder="Ingresa el código" autofocus>
+                        <p>EN CONSTRUCION, PROXIMAMENTE...</p>
+                        <div class="spinner-border" role="status" id="spinner4">
+                            <span class="sr-only">Cargando...</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
                 <!-- Botón de flecha hacia arriba -->
                 <a href="#" id="scrollToTop" class="btn btn-warning" style="display: none;">
