--- a/controlMeli.html
+++ b/controlMeli.html
@@ -157,6 +157,21 @@
             </div>
         </div>
 
+<!-- Comentarios Alert -->
+<div id="statusCard2" class="card">
+    <div class="card-body">
+        <h5 class="card-title text-center">Notificacion <i class="bi bi-exclamation-circle-fill"></i></h5>
+        <p class="text-center text-muted">
+            Los despachos se ordenan desde el más nuevo en la parte superior.
+        </p>
+        <div id="timer">Me cerraré en <span id="countdown">5</span> segundos</div>
+        <div class="text-center">
+            <button id="closeCard" class="btn btn-danger btn-sm">Cerrar</button>
+        </div>
+    </div>
+</div>
+<!-- Fin Comentarios Alert -->
+
                 <!-- Botón de flecha hacia arriba -->
                 <a href="#" id="scrollToTop" class="btn btn-warning" style="display: none;">
                     <i class="fas fa-arrow-up"></i>
